--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.13.8",
+		"flowbite-svelte-icons": "^3.0.0",
 		"i": "^0.3.7",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
