--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"flowbite-svelte": "^1.13.8",
 		"flowbite-svelte-icons": "^3.0.0",
 		"i": "^0.3.7",
+		"mdsvex": "^0.12.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
